# motifgate

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  REPRODUCIBILITY.md  environment.lock.txt  environment.yml  pyproject.toml  requirements.txt  zenodo.json
analysis/: README.md  extract_alpha.py  run_ablations.py  stats_significance.py
configs/: site_level_family.json
data/: download_data.py
external_validation/: README.md  motifgate_external_unibind_validation.py  motifgate_validation_utils.py
external_validation/metadata/: jaspar_unibind_mapping.csv
scripts/: run_all.sh  run_seeds.sh
src/motifgate/: __init__.py  cli.py  constants.py  data.py  experiment.py  exports.py  interpret.py  model.py  pwm_io.py  train.py  utils.py
