[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motifgate"
version = "1.0.0"
description = "PWM-aware residual learning model for short-window TFBS prediction"
readme = "README.md"
requires-python = ">=3.12.7"
license = { file = "LICENSE" }
authors = [
  { name = "Raúl Galindo-Hernández" },
  { name = "Ernesto Pérez-Rueda" },
]
dependencies = ["numpy>=1.26.4", "scikit-learn>=1.7.1", "torch>=2.9.1", "torchaudio>=2.9.1", "torchvision>=0.24.1"]

[project.scripts]
motifgate = "motifgate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
